--- a/HotdAmn/Interface/Preferences/PrefsAppearance.xib
+++ b/HotdAmn/Interface/Preferences/PrefsAppearance.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
 		<string key="IBDocument.SystemVersion">11C74</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1617</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
 		<string key="IBDocument.AppKitVersion">1138.23</string>
 		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1617</string>
+			<string key="NS.object.0">1938</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -36,11 +36,8 @@
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.Metadata">
-			<bool key="EncodedWithXMLCoder">YES</bool>
-			<object class="NSArray" key="dict.sortedKeys" id="0">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-			</object>
-			<reference key="dict.values" ref="0"/>
+			<string key="NS.key.0">PluginDependencyRecalculationVersion</string>
+			<integer value="1" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -138,7 +135,6 @@
 						<string key="NSFrame">{{144, 20}, {185, 29}}</string>
 						<reference key="NSSuperview" ref="676335128"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:3936</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="302294699">
@@ -781,37 +777,85 @@
 					<int key="connectionID">37</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">fontName: values.inputFontName</string>
-						<reference key="source" ref="383763066"/>
-						<reference key="destination" ref="70241278"/>
-						<object class="NSNibBindingConnector" key="connector" id="308499343">
-							<reference key="NSSource" ref="383763066"/>
-							<reference key="NSDestination" ref="70241278"/>
-							<string key="NSLabel">fontName: values.inputFontName</string>
-							<string key="NSBinding">fontName</string>
-							<string key="NSKeyPath">values.inputFontName</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
+					<object class="IBActionConnection" key="connection">
+						<string key="label">addTableItem:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="501214298"/>
 					</object>
-					<int key="connectionID">70</int>
+					<int key="connectionID">117</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">highlights</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="412686438"/>
+					</object>
+					<int key="connectionID">120</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">removeTableItem:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="479840479"/>
+					</object>
+					<int key="connectionID">138</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">removeHighlightButton</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="479840479"/>
+					</object>
+					<int key="connectionID">139</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">scrollbackErr</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="240116152"/>
+					</object>
+					<int key="connectionID">173</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">themes</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="500112786"/>
+					</object>
+					<int key="connectionID">183</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">fontSize: values.inputFontSize</string>
-						<reference key="source" ref="383763066"/>
-						<reference key="destination" ref="70241278"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="383763066"/>
-							<reference key="NSDestination" ref="70241278"/>
-							<string key="NSLabel">fontSize: values.inputFontSize</string>
-							<string key="NSBinding">fontSize</string>
-							<string key="NSKeyPath">values.inputFontSize</string>
-							<reference key="NSPreviousConnector" ref="308499343"/>
+						<string key="label">content: arrangedObjects</string>
+						<reference key="source" ref="269342102"/>
+						<reference key="destination" ref="500112786"/>
+						<object class="NSNibBindingConnector" key="connector" id="590064313">
+							<reference key="NSSource" ref="269342102"/>
+							<reference key="NSDestination" ref="500112786"/>
+							<string key="NSLabel">content: arrangedObjects</string>
+							<string key="NSBinding">content</string>
+							<string key="NSKeyPath">arrangedObjects</string>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">71</int>
+					<int key="connectionID">182</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">selectedObject: values.themeName</string>
+						<reference key="source" ref="269342102"/>
+						<reference key="destination" ref="70241278"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="269342102"/>
+							<reference key="NSDestination" ref="70241278"/>
+							<string key="NSLabel">selectedObject: values.themeName</string>
+							<string key="NSBinding">selectedObject</string>
+							<string key="NSKeyPath">values.themeName</string>
+							<reference key="NSPreviousConnector" ref="590064313"/>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">190</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -847,20 +891,37 @@
 					<int key="connectionID">75</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">addTableItem:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="501214298"/>
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">fontName: values.inputFontName</string>
+						<reference key="source" ref="383763066"/>
+						<reference key="destination" ref="70241278"/>
+						<object class="NSNibBindingConnector" key="connector" id="308499343">
+							<reference key="NSSource" ref="383763066"/>
+							<reference key="NSDestination" ref="70241278"/>
+							<string key="NSLabel">fontName: values.inputFontName</string>
+							<string key="NSBinding">fontName</string>
+							<string key="NSKeyPath">values.inputFontName</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
 					</object>
-					<int key="connectionID">117</int>
+					<int key="connectionID">70</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">highlights</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="412686438"/>
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">fontSize: values.inputFontSize</string>
+						<reference key="source" ref="383763066"/>
+						<reference key="destination" ref="70241278"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="383763066"/>
+							<reference key="NSDestination" ref="70241278"/>
+							<string key="NSLabel">fontSize: values.inputFontSize</string>
+							<string key="NSBinding">fontSize</string>
+							<string key="NSKeyPath">values.inputFontSize</string>
+							<reference key="NSPreviousConnector" ref="308499343"/>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
 					</object>
-					<int key="connectionID">120</int>
+					<int key="connectionID">71</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -871,20 +932,12 @@
 					<int key="connectionID">137</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">removeTableItem:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="479840479"/>
-					</object>
-					<int key="connectionID">138</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">removeHighlightButton</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="479840479"/>
+						<string key="label">delegate</string>
+						<reference key="source" ref="412686438"/>
+						<reference key="destination" ref="1001"/>
 					</object>
-					<int key="connectionID">139</int>
+					<int key="connectionID">174</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -927,22 +980,6 @@
 					<int key="connectionID">168</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">scrollbackErr</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="240116152"/>
-					</object>
-					<int key="connectionID">173</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="412686438"/>
-						<reference key="destination" ref="1001"/>
-					</object>
-					<int key="connectionID">174</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: values.timestampFormat</string>
 						<reference key="source" ref="193227781"/>
@@ -958,54 +995,15 @@
 					</object>
 					<int key="connectionID">180</int>
 				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">content: arrangedObjects</string>
-						<reference key="source" ref="269342102"/>
-						<reference key="destination" ref="500112786"/>
-						<object class="NSNibBindingConnector" key="connector" id="590064313">
-							<reference key="NSSource" ref="269342102"/>
-							<reference key="NSDestination" ref="500112786"/>
-							<string key="NSLabel">content: arrangedObjects</string>
-							<string key="NSBinding">content</string>
-							<string key="NSKeyPath">arrangedObjects</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">182</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">themes</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="500112786"/>
-					</object>
-					<int key="connectionID">183</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">selectedObject: values.themeName</string>
-						<reference key="source" ref="269342102"/>
-						<reference key="destination" ref="70241278"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="269342102"/>
-							<reference key="NSDestination" ref="70241278"/>
-							<string key="NSLabel">selectedObject: values.themeName</string>
-							<string key="NSBinding">selectedObject</string>
-							<string key="NSKeyPath">values.themeName</string>
-							<reference key="NSPreviousConnector" ref="590064313"/>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">190</int>
-				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<reference key="object" ref="0"/>
+						<object class="NSArray" key="object" id="0">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+						</object>
 						<reference key="children" ref="1000"/>
 						<nil key="parent"/>
 					</object>
