--- a/HotdAmn/en.lproj/Themes/Default.hdtheme/Default.css
+++ b/HotdAmn/en.lproj/Themes/Default.hdtheme/Default.css
@@ -10,6 +10,10 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
+.server-msg {
+	background: #333;
+}
+
 .server-msg avatar-container {
 	display: none;
 }
@@ -49,6 +53,13 @@ msg {
 	text-shadow: 0 1px 1px #111;
 	padding: 3px 0;
 	display: block;
+}
+
+msg .thumb {
+	border: 6px solid #222;
+	outline: 1px solid rgba(255,255,255,0.1);
+	width: 75px;
+	height: auto;
 }
 
 username {
