--- a/HotdAmn/en.lproj/Themes/Default.hdtheme/Default.css
+++ b/HotdAmn/en.lproj/Themes/Default.hdtheme/Default.css
@@ -58,7 +58,7 @@ msg {
 msg .thumb {
 	border: 6px solid #222;
 	outline: 1px solid rgba(255,255,255,0.1);
-	width: 75px;
+	max-width: 75px;
 	height: auto;
 }
 
