--- a/HotdAmn/Interface/Topic.xib
+++ b/HotdAmn/Interface/Topic.xib
@@ -21,17 +21,19 @@
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<string>NSScroller</string>
 			<string>NSSplitView</string>
-			<string>NSView</string>
-			<string>NSWindowTemplate</string>
+			<string>NSButton</string>
 			<string>NSScrollView</string>
+			<string>NSButtonCell</string>
+			<string>NSTextFieldCell</string>
 			<string>WebView</string>
 			<string>NSCustomView</string>
-			<string>NSButtonCell</string>
 			<string>NSTextView</string>
-			<string>NSButton</string>
-			<string>NSScroller</string>
+			<string>NSView</string>
+			<string>NSWindowTemplate</string>
 			<string>NSCustomObject</string>
+			<string>NSTextField</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -56,13 +58,13 @@
 			<object class="NSWindowTemplate" id="1005">
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{196, 240}, {441, 196}}</string>
+				<string key="NSWindowRect">{{196, 240}, {441, 240}}</string>
 				<int key="NSWTFlags">544735232</int>
 				<string key="NSWindowTitle">Topic</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
-				<string key="NSWindowContentMinSize">{200, 50}</string>
+				<string key="NSWindowContentMinSize">{200, 150}</string>
 				<object class="NSView" key="NSWindowView" id="1006">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -71,7 +73,7 @@
 						<object class="NSButton" id="125642715">
 							<reference key="NSNextResponder" ref="1006"/>
 							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{352, 3}, {85, 32}}</string>
+							<string key="NSFrame">{{342, 12}, {85, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
@@ -99,7 +101,7 @@
 						<object class="NSButton" id="338328565">
 							<reference key="NSNextResponder" ref="1006"/>
 							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{275, 3}, {82, 32}}</string>
+							<string key="NSFrame">{{260, 12}, {82, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="125642715"/>
@@ -154,7 +156,7 @@
 													<string>public.url-name</string>
 												</object>
 											</object>
-											<string key="NSFrame">{{0, -30}, {422, 107}}</string>
+											<string key="NSFrame">{{1, 1}, {399, 68}}</string>
 											<reference key="NSSuperview" ref="770151734"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView"/>
@@ -169,13 +171,21 @@
 														<bool key="EncodedWithXMLCoder">YES</bool>
 														<string>WebKitDefaultFixedFontSize</string>
 														<string>WebKitDefaultFontSize</string>
+														<string>WebKitJavaEnabled</string>
+														<string>WebKitJavaScriptCanOpenWindowsAutomatically</string>
+														<string>WebKitJavaScriptEnabled</string>
 														<string>WebKitMinimumFontSize</string>
+														<string>WebKitPluginsEnabled</string>
 													</object>
 													<object class="NSMutableArray" key="dict.values">
 														<bool key="EncodedWithXMLCoder">YES</bool>
 														<integer value="12"/>
 														<integer value="12"/>
+														<boolean value="NO"/>
+														<boolean value="NO"/>
+														<boolean value="NO"/>
 														<integer value="1"/>
+														<boolean value="NO"/>
 													</object>
 												</object>
 											</object>
@@ -183,11 +193,12 @@
 											<bool key="AllowsUndo">YES</bool>
 										</object>
 									</object>
-									<string key="NSFrameSize">{422, 77}</string>
+									<string key="NSFrameSize">{401, 70}</string>
 									<reference key="NSSuperview" ref="933545604"/>
 									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="248297087"/>
 									<string key="NSReuseIdentifierKey">_NS:1113</string>
-									<string key="NSClassName">NSView</string>
+									<string key="NSClassName">BorderedView</string>
 								</object>
 								<object class="NSCustomView" id="37520535">
 									<reference key="NSNextResponder" ref="933545604"/>
@@ -230,7 +241,7 @@
 																	<string>public.url</string>
 																</object>
 															</object>
-															<string key="NSFrameSize">{420, 20}</string>
+															<string key="NSFrameSize">{399, 22}</string>
 															<reference key="NSSuperview" ref="1024176006"/>
 															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="500304095"/>
@@ -251,11 +262,11 @@
 																	<nil key="NSDelegate"/>
 																</object>
 																<reference key="NSTextView" ref="248799417"/>
-																<double key="NSWidth">420</double>
+																<double key="NSWidth">399</double>
 																<int key="NSTCFlags">1</int>
 															</object>
 															<object class="NSTextViewSharedData" key="NSSharedData">
-																<int key="NSFlags">12115</int>
+																<int key="NSFlags">67120979</int>
 																<int key="NSTextCheckingTypes">0</int>
 																<nil key="NSMarkedAttributes"/>
 																<object class="NSColor" key="NSBackgroundColor" id="721494193">
@@ -275,7 +286,7 @@
 																			<int key="NSColorSpace">6</int>
 																			<string key="NSCatalogName">System</string>
 																			<string key="NSColorName">selectedTextBackgroundColor</string>
-																			<object class="NSColor" key="NSColor">
+																			<object class="NSColor" key="NSColor" id="754152346">
 																				<int key="NSColorSpace">3</int>
 																				<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 																			</object>
@@ -323,7 +334,7 @@
 															<nil key="NSDelegate"/>
 														</object>
 													</object>
-													<string key="NSFrame">{{1, 1}, {420, 59}}</string>
+													<string key="NSFrame">{{1, 1}, {399, 67}}</string>
 													<reference key="NSSuperview" ref="1044148122"/>
 													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="248799417"/>
@@ -361,7 +372,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 												<object class="NSScroller" id="500304095">
 													<reference key="NSNextResponder" ref="1044148122"/>
 													<int key="NSvFlags">256</int>
-													<string key="NSFrame">{{406, 1}, {15, 59}}</string>
+													<string key="NSFrame">{{385, 1}, {15, 67}}</string>
 													<reference key="NSSuperview" ref="1044148122"/>
 													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="338328565"/>
@@ -386,7 +397,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 													<double key="NSPercent">0.94565218687057495</double>
 												</object>
 											</object>
-											<string key="NSFrameSize">{422, 61}</string>
+											<string key="NSFrameSize">{401, 69}</string>
 											<reference key="NSSuperview" ref="37520535"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="4455824"/>
@@ -397,27 +408,58 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 											<reference key="NSContentView" ref="1024176006"/>
 										</object>
 									</object>
-									<string key="NSFrame">{{0, 87}, {422, 61}}</string>
+									<string key="NSFrame">{{0, 79}, {401, 69}}</string>
 									<reference key="NSSuperview" ref="933545604"/>
 									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="1044148122"/>
 									<string key="NSReuseIdentifierKey">_NS:1116</string>
 									<string key="NSClassName">NSView</string>
 								</object>
 							</object>
-							<string key="NSFrame">{{9, 39}, {422, 148}}</string>
+							<string key="NSFrame">{{20, 60}, {401, 148}}</string>
 							<reference key="NSSuperview" ref="1006"/>
 							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="770151734"/>
 							<string key="NSReuseIdentifierKey">_NS:1111</string>
-							<int key="NSDividerStyle">3</int>
+						</object>
+						<object class="NSTextField" id="435007506">
+							<reference key="NSNextResponder" ref="1006"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{17, 216}, {43, 17}}</string>
+							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="933545604"/>
+							<string key="NSReuseIdentifierKey">_NS:3944</string>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="101655266">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">272630784</int>
+								<string key="NSContents">Topic:</string>
+								<reference key="NSSupport" ref="789513228"/>
+								<string key="NSCellIdentifier">_NS:3944</string>
+								<reference key="NSControlView" ref="435007506"/>
+								<object class="NSColor" key="NSBackgroundColor">
+									<int key="NSColorSpace">6</int>
+									<string key="NSCatalogName">System</string>
+									<string key="NSColorName">controlColor</string>
+									<reference key="NSColor" ref="754152346"/>
+								</object>
+								<object class="NSColor" key="NSTextColor">
+									<int key="NSColorSpace">6</int>
+									<string key="NSCatalogName">System</string>
+									<string key="NSColorName">controlTextColor</string>
+									<reference key="NSColor" ref="824008535"/>
+								</object>
+							</object>
 						</object>
 					</object>
-					<string key="NSFrameSize">{441, 196}</string>
+					<string key="NSFrameSize">{441, 240}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView" ref="1044148122"/>
+					<reference key="NSNextKeyView" ref="435007506"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMinSize">{200, 72}</string>
+				<string key="NSMinSize">{200, 172}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -464,6 +506,14 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<reference key="destination" ref="248297087"/>
 					</object>
 					<int key="connectionID">24</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">topicContainer</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="770151734"/>
+					</object>
+					<int key="connectionID">32</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -520,6 +570,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 							<reference ref="933545604"/>
 							<reference ref="125642715"/>
 							<reference ref="338328565"/>
+							<reference ref="435007506"/>
 						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
@@ -610,6 +661,20 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<reference key="object" ref="248297087"/>
 						<reference key="parent" ref="770151734"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">30</int>
+						<reference key="object" ref="435007506"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="101655266"/>
+						</object>
+						<reference key="parent" ref="1006"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">31</int>
+						<reference key="object" ref="101655266"/>
+						<reference key="parent" ref="435007506"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -632,6 +697,8 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 					<string>28.IBPluginDependency</string>
 					<string>29.IBPluginDependency</string>
 					<string>3.IBPluginDependency</string>
+					<string>30.IBPluginDependency</string>
+					<string>31.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
@@ -657,6 +724,8 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -671,11 +740,19 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 				<reference key="dict.values" ref="1002"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">29</int>
+			<int key="maxID">32</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">BorderedView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BorderedView.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">TopicDialog</string>
 					<string key="superclassName">NSWindowController</string>
@@ -715,11 +792,13 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>topicContainer</string>
 							<string>topicContents</string>
 							<string>topicRendered</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>BorderedView</string>
 							<string>NSTextView</string>
 							<string>WebView</string>
 						</object>
@@ -728,11 +807,16 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>topicContainer</string>
 							<string>topicContents</string>
 							<string>topicRendered</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">topicContainer</string>
+								<string key="candidateClassName">BorderedView</string>
+							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">topicContents</string>
 								<string key="candidateClassName">NSTextView</string>
