--- a/HotdAmn/Interface/Preferences/PrefsAppearance.xib
+++ b/HotdAmn/Interface/Preferences/PrefsAppearance.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
-		<string key="IBDocument.SystemVersion">11C74</string>
+		<string key="IBDocument.SystemVersion">11D50</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1138.23</string>
-		<string key="IBDocument.HIToolboxVersion">567.00</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1938</string>
@@ -99,7 +99,7 @@
 					<object class="NSTextField" id="440600178">
 						<reference key="NSNextResponder" ref="676335128"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{17, 103}, {125, 17}}</string>
+						<string key="NSFrame">{{17, 102}, {125, 17}}</string>
 						<reference key="NSSuperview" ref="676335128"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="193227781"/>
@@ -135,6 +135,7 @@
 						<string key="NSFrame">{{144, 20}, {185, 29}}</string>
 						<reference key="NSSuperview" ref="676335128"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:3936</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="302294699">
@@ -221,7 +222,7 @@
 					<object class="NSTextField" id="930263852">
 						<reference key="NSNextResponder" ref="676335128"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{18, 57}, {125, 17}}</string>
+						<string key="NSFrame">{{18, 56}, {125, 17}}</string>
 						<reference key="NSSuperview" ref="676335128"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="417165563"/>
@@ -1682,8 +1683,8 @@
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{8, 8}</string>
-				<string>{9, 8}</string>
-				<string>{7, 2}</string>
+				<string>{11, 11}</string>
+				<string>{10, 3}</string>
 				<string>{8, 8}</string>
 			</object>
 		</object>
